--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1> Hello world! </h1> 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<title> Clare N. Lewis </title> 
+</head> 
+<body> 
+<h1> Clare N. Lewis </h1> 
+<img src="profile_picture.jpg" alt="Clare" style="width: 200px">
+<h4> Please explore my work with Ruby in <a href="https://github.com/cnlewis19/ruby-challenges"> my Ruby challenges repository. </a> </h4> 
+
