--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
 	<title> Clare N. Lewis </title> 
 </head> 
 <body> 
-<h1> Clare N. Lewis </h1> 
-<img src="profile_picture.jpg" alt="Clare" style="width: 200px">
-<h4> Please explore my work with Ruby in <a href="https://github.com/cnlewis19/ruby-challenges"> my Ruby challenges repository. </a> </h4> 
+	
+	<heading> 
+	<h1> Clare N. Lewis </h1>
+	<h2> GitHub Portfolio </h2> 
+	</heading> 
+	
+	<section> 
+		<h3> HTML and CSS Projects </h3> 
+		<a href="https://cnlewis19.github.io/rogue-pickings/"> Rogue Pickings </a>
+		<a href="https://cnlewis19.github.io/skillcrush-101/"> Initial Landing Page </a>
+		<a href="https://cnlewis19.github.io/clare-concept-coming-soon/"> Initial Coming Soon Page </a>
+		<a href="https://cnlewis19.github.io/blackthorn/"> Website Mockup for the Blackthorn Restaurant </a>
+		<a href="https://cnlewis19.github.io/udacity-portfolio/"> Udacity Portfolio Project </a>
+	</section> 
+	<section> 
+		<h3> JavaScript Projects </h3> 
+		<a href="https://cnlewis19.github.io/fend-memory-game/"> Memory Game </a>
+		<a href="https://cnlewis19.github.io/arcade-game/"> Arcade Game </a> 
+		<h3> Repositories for other JavaScript Projects </h3> 
+		<a href="https://github.com/cnlewis19/myreads"> React Bookshelf Project </a>
+		<a href="https://github.com/cnlewis19/restaurant-reviews"> Restaurant Reviews Project </a> 
+		<a href="https://github.com/cnlewis19/neighborhood-map"> Neighborhood Map Project </a>
+	</section> 
+	<section> 
+		<a href="https://clareconcept.com/portfolio"><h3> View my WordPress Portfolio </h3></a>
+	</section>
+	
+	
 
