--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 	
 	<section> 
 		<h3> HTML and CSS Projects </h3> 
-		<a href="https://cnlewis19.github.io/rogue-pickings/"> Rogue Pickings </a>
-		<a href="https://cnlewis19.github.io/skillcrush-101/"> Initial Landing Page </a>
-		<a href="https://cnlewis19.github.io/clare-concept-coming-soon/"> Initial Coming Soon Page </a>
-		<a href="https://cnlewis19.github.io/blackthorn/"> Website Mockup for the Blackthorn Restaurant </a>
-		<a href="https://cnlewis19.github.io/udacity-portfolio/"> Udacity Portfolio Project </a>
+		<a href="https://cnlewis19.github.io/rogue-pickings/"> <p> Rogue Pickings </p> </a>
+		<a href="https://cnlewis19.github.io/skillcrush-101/"> <p> Initial Landing Page </p> </a>
+		<a href="https://cnlewis19.github.io/clare-concept-coming-soon/"> <p> Initial Coming Soon Page </p> </a>
+		<a href="https://cnlewis19.github.io/blackthorn/"> </p> Website Mockup for the Blackthorn Restaurant </p> </a>
+		<a href="https://cnlewis19.github.io/udacity-portfolio/"> <p> Udacity Portfolio Project </p> </a>
 	</section> 
 	<section> 
 		<h3> JavaScript Projects </h3> 
-		<a href="https://cnlewis19.github.io/fend-memory-game/"> Memory Game </a>
-		<a href="https://cnlewis19.github.io/arcade-game/"> Arcade Game </a> 
+		<a href="https://cnlewis19.github.io/fend-memory-game/"> <p> Memory Game </p> </a>
+		<a href="https://cnlewis19.github.io/arcade-game/"> <p> Arcade Game </p> </a> 
 		<h3> Repositories for other JavaScript Projects </h3> 
-		<a href="https://github.com/cnlewis19/myreads"> React Bookshelf Project </a>
-		<a href="https://github.com/cnlewis19/restaurant-reviews"> Restaurant Reviews Project </a> 
-		<a href="https://github.com/cnlewis19/neighborhood-map"> Neighborhood Map Project </a>
+		<a href="https://github.com/cnlewis19/myreads"> <p> React Bookshelf Project </p></a>
+		<a href="https://github.com/cnlewis19/restaurant-reviews"> <p> Restaurant Reviews Project </p> </a> 
+		<a href="https://github.com/cnlewis19/neighborhood-map"> <p> Neighborhood Map Project</p> </a>
 	</section> 
 	<section> 
 		<a href="https://clareconcept.com/portfolio"><h3> View my WordPress Portfolio </h3></a>
